--- a/package.json
+++ b/package.json
@@ -29,21 +29,26 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "9.0.1",
+    "@angular/common": "9.0.1",
+    "@angular/compiler": "9.0.1",
+    "@angular/core": "9.0.1",
+    "@angular/forms": "9.0.1",
+    "@angular/platform-browser": "9.0.1",
+    "@angular/platform-browser-dynamic": "9.0.1",
+    "@angular/router": "9.0.1",
+    "@clr/angular": "3.0.0-next.8",
+    "@clr/core": "^3.0.0-next.8",
+    "@clr/icons": "3.0.0-next.8",
+    "@clr/ui": "3.0.0-next.8",
     "@nrwl/angular": "9.0.1",
-    "@angular/animations": "9.0.0",
-    "@angular/common": "9.0.0",
-    "@angular/compiler": "9.0.0",
-    "@angular/core": "9.0.0",
-    "@angular/forms": "9.0.0",
-    "@angular/platform-browser": "9.0.0",
-    "@angular/platform-browser-dynamic": "9.0.0",
-    "@angular/router": "9.0.0",
+    "@webcomponents/custom-elements": "^1.0.0",
     "core-js": "^2.5.4",
-    "rxjs": "~6.5.0",
+    "rxjs": "~6.5.4",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "9.0.1",
+    "@angular/cli": "9.0.2",
     "@nrwl/workspace": "9.0.1",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
