--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@angular/platform-browser": "9.0.1",
     "@angular/platform-browser-dynamic": "9.0.1",
     "@angular/router": "9.0.1",
+    "@babel/preset-env": "7.8.4",
     "@clr/angular": "3.0.0-next.8",
     "@clr/core": "^3.0.0-next.8",
     "@clr/icons": "3.0.0-next.8",
     "@clr/ui": "3.0.0-next.8",
     "@nrwl/angular": "9.0.1",
-    "@webcomponents/custom-elements": "^1.0.0",
+    "@webcomponents/custom-elements": "1.0.0",
+    "babel-jest": "25.1.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
     "zone.js": "^0.10.2"
