--- a/package.json
+++ b/package.json
@@ -39,36 +39,36 @@
     "@angular/router": "9.0.1",
     "@babel/preset-env": "7.8.4",
     "@clr/angular": "3.0.0-next.8",
-    "@clr/core": "^3.0.0-next.8",
+    "@clr/core": "3.0.0-next.8",
     "@clr/icons": "3.0.0-next.8",
     "@clr/ui": "3.0.0-next.8",
     "@nrwl/angular": "9.0.1",
     "@webcomponents/custom-elements": "1.0.0",
     "babel-jest": "25.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.4",
-    "zone.js": "^0.10.2"
+    "core-js": "2.5.4",
+    "rxjs": "6.5.4",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular/cli": "9.0.2",
     "@nrwl/workspace": "9.0.1",
-    "@types/node": "~8.9.4",
+    "@types/node": "8.9.4",
     "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "ts-node": "7.0.0",
+    "tslint": "5.11.0",
     "eslint": "6.1.0",
-    "typescript": "~3.7.4",
+    "typescript": "3.7.4",
     "prettier": "1.18.2",
     "@angular/compiler-cli": "9.0.0",
     "@angular/language-service": "9.0.0",
     "@angular-devkit/build-angular": "0.900.1",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "5.0.1",
     "jest-preset-angular": "8.0.0",
     "@nrwl/jest": "9.0.1",
     "jest": "24.1.0",
     "@types/jest": "24.0.9",
     "ts-jest": "24.0.0",
-    "cypress": "^3.8.2",
+    "cypress": "3.8.2",
     "@nrwl/cypress": "9.0.1"
   }
 }
