--- a/package.json
+++ b/package.json
@@ -37,37 +37,37 @@
     "@angular/platform-browser": "9.0.6",
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
-    "@babel/preset-env": "7.8.4",
     "@clr/angular": "3.0.1",
     "@clr/core": "3.0.1",
     "@clr/icons": "3.0.1",
     "@clr/ui": "3.0.1",
     "@nrwl/angular": "9.1.2",
-    "@webcomponents/webcomponentsjs": "^2.4.2",
-    "babel-jest": "25.1.0",
+    "@webcomponents/webcomponentsjs": "2.4.2",
     "core-js": "2.5.4",
     "rxjs": "6.5.4",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
+    "@types/jest": "25.1.4",
+    "@types/node": "12.12.30",
+    "babel-jest": "25.1.0",
+    "jest": "25.1.0",
+    "ts-jest": "25.2.1",
+    "ts-node": "8.6.2",
+    "typescript": "3.7.5",
+    "@babel/preset-env": "7.8.7",
+    "jest-preset-angular": "8.1.1",
     "@angular/cli": "9.0.6",
     "@nrwl/workspace": "9.1.2",
-    "@types/node": "8.9.4",
     "dotenv": "6.2.0",
-    "ts-node": "7.0.0",
     "tslint": "6.0.0",
     "eslint": "6.8.0",
-    "typescript": "3.7.4",
     "prettier": "1.19.1",
     "@angular/compiler-cli": "9.0.6",
     "@angular/language-service": "9.0.6",
     "@angular-devkit/build-angular": "0.900.6",
     "codelyzer": "5.0.1",
-    "jest-preset-angular": "8.0.0",
     "@nrwl/jest": "9.1.2",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
     "cypress": "3.8.2",
     "@nrwl/cypress": "9.1.2"
   }
