--- a/libs/lib/tsconfig.spec.json
+++ b/libs/lib/tsconfig.spec.json
@@ -1,11 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "allowJs": true,
-    "target": "ES5",
+    //    "allowJs": true,
+    //    "target": "ES5",
+    "esModuleInterop": true,
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node"]
+    //    "module": "commonjs",
+    "types": ["jest"]
+    //    "types": ["jest", "node"]
   },
   "files": ["src/test-setup.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
